--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "nuxt": "^3.11.2",
+    "sanitize-html": "^2.13.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@types/sanitize-html": "^2.11.0",
     "nuxt-svgo": "^4.0.0",
     "sass": "^1.75.0"
   }
